--- a/inst/examples/quarto_template.qmd
+++ b/inst/examples/quarto_template.qmd
@@ -5,49 +5,10 @@ format:
     embed-resources: true
 ---
 
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"
-			  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-			  crossorigin="anonymous"></script>
-
 ```{r}
-#| output: asis
-#| echo: false
-system.file('includes/html/key_entry.html', package='encryptRmd') |>
-  readLines() |>
-  cat(sep='\n')
-```
+#| echo: false 
 
-```{r}
-#| echo: false
-
-htmltools::tags$script(
-  src=system.file('includes/js/encrypted_chunk.js', package='encryptRmd')
-)
-
-htmltools::tags$script(
-  src=system.file('includes/js/markdown-it.min.js', package='encryptRmd')
-)
-
-htmltools::tags$script(
-  src=system.file('includes/js/sodium.js', package='encryptRmd'),
-  async=NA
-)
-
-htmltools::tags$link(
-  rel="stylesheet", 
-  href=system.file('includes/css/encrypted_chunk.css', package='encryptRmd')
-  )
-```
-
-```{r}
-#| include: false
-
-local({
-  knitr::knit_hooks$set(
-    output = encryptRmd:::enc_out_hook,
-    plot = encryptRmd:::enc_plot_hook
-    )
-})
+encryptRmd::encryptRmd_general_setup(jquery = TRUE)
 ```
 
 ## Quarto
@@ -72,6 +33,8 @@ You can add options to executable code like this
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
+
+## Plots
 
 ```{r}
 #| echo: true
